'初始化工程'

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,23 @@
+<!--
+ * @Descripttion: 
+ * @version: 
+ * @Author: pengheyan
+ * @Date: 2020-12-22 15:46:58
+ * @LastEditors: pengheyan
+ * @LastEditTime: 2020-12-24 13:11:51
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <link rel="stylesheet" href="./libs/minemap/v2.0/minemap.css">
+    <title>vue2.x模板</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="./libs/minemap/v2.0/minemap.js"></script>
   </body>
 </html>
